updated designs for most, working on fixing sign up button and text wrap.

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ ul{
 .header{
     color: white;
     background-color: #1F2937;
+    padding: 34px;
 }
 
 .title-web{
@@ -27,41 +28,73 @@ ul{
 
 .bar{
     display: flex;
+    justify-content: space-between;
+    padding: 8px;
 }
 
-.left-text{
-    display: flex;
+.first-para{
+    display:flex;
+    justify-content: center;
+    gap: 52px;
     
 }
-
 .right-pic{
     display: flex;
+    background-color: grey;
 }
 
+
 .information{
+    display: flex;
     color: black;
     background-color: white;
+    justify-content: center;
+    gap: 52px;
+}
+
+.box{
+    border: solid #3882F6;
+    border-width: 0.1rem;
 }
 
 .quote{
     color: black;
     background-color: #E5E7EB;
+    padding: 2em 10em;
+    text-align: center;
 }
 
 .sign-up{
-    color: black;
+    color: white;
     background-color: white;
+    
 }
 
 .btn{
     background-color: #3882F6;
     color: white;
+    cursor: pointer;
+    padding: 8px 16px;
+    border-radius: 8px;
+    border: 1px solid royalblue;
 }
 
 .blue-box{
     background-color: #3882F6;
+    margin: 120px;
+    padding: 24px;
+    border-radius: 8px;
 }
 
+.btnSec{
+    background-color: #3882F6;
+    color: white;
+    cursor: pointer;
+    padding: 8px 16px;
+    border-radius: 8px;
+    border: 1px solid white;
+    
+}
 
 .slant{
     font-weight: 300;
@@ -69,6 +102,12 @@ ul{
     font-size: 36px;
   }
   
+.thor{
+    font-size: 28px;
+    font-weight: 800;
+    display: flex;
+    justify-content: flex-end;
+}
 .footer{
     background-color: #1F2937;
     color: white;
